--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "prom-client": "^11.1.1",
     "qs": "^6.5.2",
     "underscore": "^1.9.1",
+    "uuid": "^3.3.2",
     "ws": "^5.2.1"
   },
   "devDependencies": {
