--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.6",
   "scripts": {
     "precommit": "npm test",
-    "test": "DEBUG=mongo-connector,cs-live-data-server NODE_ENV=test nyc mocha",
+    "test": "NODE_ENV=test nyc mocha",
     "compile": "coffee --output build --compile src"
   },
   "main": "./build/index.js",
