readme and keywords and description

--- a/package.json
+++ b/package.json
@@ -8,6 +8,18 @@
     "release-test": "npm install; npm run compile; npm test",
     "release": "npm install; npm run compile; npm test; npm publish"
   },
+  "description": "Live data from MongoDB or even Mongoose over a websocket with just one simple configuration.",
+  "keywords": [
+    "mongodb",
+    "mongoose",
+    "ws",
+    "live data",
+    "websocket",
+    "streams",
+    "changestreams",
+    "express",
+    "microservices"
+  ],
   "main": "./build/index.js",
   "files": [
     "build"
