--- a/package.json
+++ b/package.json
@@ -42,12 +42,14 @@
       "test.coffee"
     ]
   },
+  "optionalDependencies": {
+    "mongoose": "5.2.8"
+  },
   "dependencies": {
     "async": "^2.6.1",
     "config": "^1.30.0",
     "debug": "^3.1.0",
-    "mongo-changestream-connector": "^1.0.0",
-    "mongoose": "^5.2.9",
+    "mongo-changestream-connector": "^1.0.1",
     "qs": "^6.5.2",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
@@ -59,6 +61,7 @@
     "coffee-script": "^1.12.7",
     "coffeescope2": "^0.5.1",
     "mocha": "^5.2.0",
+    "mongoose": "5.2.8",
     "moment": "^2.22.2",
     "nyc": "^12.0.2"
   }
