--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "mongo-live-server",
   "version": "1.0.4",
   "scripts": {
-    "test": "NODE_ENV=test nyc mocha -r coffee-script/register test/**/*.coffee -r coffee-coverage/register-istanbul --exit",
-    "tests": "NODE_ENV=test mocha -r coffee-script/register -w --watch-extensions coffee test/**/*.coffee",
+    "test": "NODE_ENV=test nyc mocha -r coffeescript/register test/**/*.coffee -r coffee-coverage/register-istanbul --exit",
+    "tests": "NODE_ENV=test mocha -r coffeescript/register -w --watch-extensions coffee test/**/*.coffee",
     "compile": "coffee --output build --compile src",
     "release-test": "npm install; npm run compile; npm test",
     "release": "npm install; npm run compile; npm test; npm publish"
@@ -29,6 +29,7 @@
     "url": "git remote add origin git@github.com:viriciti/mongo-live-server.git"
   },
   "nyc": {
+    "extension": ".coffee",
     "lines": 80,
     "functions": 80,
     "branches": 80,
@@ -47,22 +48,22 @@
   },
   "dependencies": {
     "async": "^2.6.1",
-    "config": "^1.30.0",
+    "coffeescript": "^2.3.1",
+    "config": "^2.0.1",
     "debug": "^3.1.0",
     "mongo-changestream-connector": "^1.0.1",
     "qs": "^6.5.2",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2",
-    "winston": "^3.0.0",
-    "ws": "^5.2.1"
+    "winston": "^3.1.0",
+    "ws": "^6.0.0"
   },
   "devDependencies": {
     "coffee-coverage": "^3.0.0",
-    "coffee-script": "^1.12.7",
     "coffeescope2": "^0.5.1",
     "mocha": "^5.2.0",
-    "mongoose": "5.2.8",
     "moment": "^2.22.2",
-    "nyc": "^12.0.2"
+    "mongoose": "5.2.8",
+    "nyc": "^13.0.1"
   }
 }
